exports[`(.not).toHaveTemporaryRedirectStatus > using axios > .not.toHaveTemporaryRedirectStatus > fails when response have status code 307 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveTemporaryRedirectStatus()</intensity>

Expected status code to not be 307 received:
  <red>307</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 307,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveTemporaryRedirectStatus > using axios > .toHaveTemporaryRedirectStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveTemporaryRedirectStatus()</intensity>

Expected status code to be 307 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;
